Fixed vertical spacing in nested lists

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -752,7 +752,7 @@ h6 {
 	text-rendering: optimizeLegibility;
 	margin-top: 0.75em;
 	margin-bottom: 0.3em;
-	line-height: 1.2125em;
+	line-height: 1.25;
 }
 
 h1 small,
@@ -967,7 +967,7 @@ blockquote p {
 	h4,
 	h5,
 	h6 {
-		line-height: 1.4;
+		line-height: 1.3;
 	}
 
 	h1 {
@@ -1212,7 +1212,7 @@ kbd:not(.keyseq) {
 	box-shadow: 0 0 1px 2px var(--kbd-not-keyseq-box-shadow-color),
 		0 0.5px 1px 1px var(--kbd-not-keyseq-box-shadow-alt-color);
 	margin: 0.02em 0.2em 0;
-	padding: 0.24em 0.34em max(calc(0.2em - 4px), 0px);
+	padding: 0.2em 0.34em max(calc(0.3em - 0.5ex), 0px);
 	vertical-align: middle;
 	white-space: nowrap;
 }
@@ -2022,14 +2022,23 @@ ul > li p {
 	margin-bottom: 0.3em;
 }
 
-ol > li > p:first-child,
+:is(ol, ul) > li > :is(p:first-child, .paragraph > p, .paragraph:last-child > p) {
+	margin-bottom: 0.7em;
+}
+
+:is(.ulist, .olist) :is(ol, ul) > li :is(.ulist, .olist) :is(ol, ul) > li > p,
+.dlist > dl > dd > :is(.ulist, .olist) li > p {
+	margin-bottom: 0.1em;
+}
+
+/* ol > li > p:first-child,
 ul > li > p:first-child,
 ol > li > .paragraph > p,
 ul > li > .paragraph > p,
 ol > li > .paragraph:last-child > p,
 ul > li > .paragraph:last-child > p {
 	margin-bottom: 0.7em;
-}
+} */
 
 :not(dd) ol,
 :not(dd) ul {
